--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -11,6 +11,7 @@
     <li><p><a href="/myarts">Articles to exemplify owned rows</a></p></li>
     <li><p><a href="/crispy">Crispy and boring forms</a></p></li>
     <li><p><a href="/ads"> Classified Ads #1</a></p></li>
-    <li><p><a href="/admin"> Admin - Admins only</a><p></li>
     <li><p><a href="/pics"> Pics - Pictures ^_^ </a><p></li>
+    <li><p><a href="/chat"> Chat - json ^_^ </a><p></li>
+    <li><p><a href="/admin"> Admin - Admins only</a><p></li> 
 </ol>
