--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -1,75 +1,25 @@
-<html>
-<head>
-    <title>{{ settings.APP_NAME }}</title>
-    <!-- edit samples/settings.py and add APP_NAME='DJ4E Samples' or similar
-        Also make sure that home/context_processors.py exists and is included
-        settings.py context processors as 'home.context_processors.settings' -->
-</head>
-<body>
-    <h1>Welcome to the DJ4E Samples</h1>
-    <p>
-    Here are some samples (Each will open in a new tab):
-    <ul>
-        <li><a href="hello" target="_blank">hello</a> - A very simple view</li>
-        <li><b>users</b> - One table model / SQL - uses the django shell
-            and <a href="admin" target="_blank">admin</a></li>
-        <li><b>tracks</b> -  Many to one models / SQL - uses the django shell 
-            and <a href="admin" target="_blank">admin</a></li>
-        <li><b>many</b> -  Many to many models - Loading data from a script
-            and <a href="admin" target="_blank">admin</a>
-            (<a href="https://www.dj4e.com/assn/dj4e_load.md" target="_blank">Assignment</a>)
-        </li>
-        <li><a href="site" target="_blank">site</a> - An example folder with HTML content</li>
-        <li><a href="views" target="_blank">views</a> - Looking at function and class views</li>
-        <li><a href="tmpl" target="_blank">tmpl</a> - Using templates in views
-         (<a href="https://docs.djangoproject.com/en/3.0/ref/templates/language/"
-             target="_blank">Documentation</a>)
-        </li>
-        <li><a href="route" target="_blank">route</a> - Using routes, namespaces, and reverse in urls.py
-         (<a href="https://docs.djangoproject.com/en/3.0/topics/http/urls/#reverse-resolution-of-urls"
-             target="_blank">Documentation</a>)
-        </li>
-        <li><a href="gview" target="_blank">gview</a> - Understanding how the generic views work
-        (<a href="admin" target="_blank">admin</a>)</li>
-        <li><a href="session" target="_blank">session</a> - Cookies and sessions
-            (<a href="https://www.dj4e.com/assn/dj4e_sessions.md" target="_blank">Assignment</a>)
-        </li>
-        <li><a href="authz" target="_blank">authz</a> - Using Django login
-        </li>
-        <li><a href="getpost" target="_blank">getpost</a> - Exploring HTTP get / post / redirect and HTML forms</li>
-        <li><a href="form" target="_blank">form</a> - Using the Django forms library
-        </li>
-        <li><a href="autos" target="_blank">autos</a> - Autos CRUD
-            (<a href="https://www.dj4e.com/assn/dj4e_autos.md" target="_blank">Assignment</a>)
-        </li>
-        <li><a href="crispy" target="_blank">crispy</a> - Using Crispy forms and messages libraries
-            (<a href="https://django-crispy-forms.readthedocs.io/en/latest/install.html" target="_blank">Installation</a>,
-            <a href="https://django-crispy-forms.readthedocs.io/en/latest/filters.html" target="_blank">Crispy Filter</a>)
-        </li>
-        <li><a href="myarts" target="_blank">myarts</a> - Owning rows in a model</li>
-        <li><a href="menu" target="_blank">menu</a> - Making a bootstrap nav bar
-            (<a href="https://getbootstrap.com/docs/3.3/components/#navbar" target="_blank">Bootstrap 3 Documentation</a>)
-        </li>
-        <li><a href="pics" target="_blank">pics</a> - Storing small images in the database</li>
-        <li><a href="forums" target="_blank">forums</a> - Many to many comment example</li>
-        <li><a href="chat" target="_blank">chat</a> - A simple JSON Chat</li>
-        <li>Add a <a href="/favicon.ico" target="_blank">favicon</a> 
-            in <b>samples/urls.py</b> and <b>home/static</b>
-            (<a href="https://favicon.io/favicon-converter/" target="_blank">Make your own</a>)
-        </li>
-        <li><a href="https://python-social-auth.readthedocs.io/en/latest/configuration/django.html"
-            target="_blank">Django Social Login Documentation</a>
-        </li>
-        <li><a href="favs" target="_blank">favs</a> - A few of my favorite / favourite things</li>
-        <!-- "well" is a play on "medium-well" and also a reference the the early bay-area BBS system -->
-        <li><a href="well" target="_blank">well</a> - A multi-user blogging system</li>
-        <!--  Not quite right
-        <li><a href="favsql" target="_blank">favsql</a> - An advanced version of favs using SQL directly</li>
-        -->
-        <li><a href="rest" target="_blank">rest</a> - Using the Django rest framework
-            (<a href="https://www.django-rest-framework.org/" target="_blank">Django Rest Framework Documentation</a>)
-        </li>
-    </ul>
+<h1>My apps </h1>
+<ol>
+    <li><p><a href="/site"> Site - primeros ejercicios </a></p></li>
+    <li><p><a href="/polls"> A Polls Application dfa92d8f </a></p></li>
+    <li><p><a href="/publi"> Publi - Publishers exercise</a></p></li>
+    <li><p><a href="/hello"> Hello - Cookies exercise</a></p></li>
+    <li><p><a href="/authz"> Authz - Login examples</a></p></li>
+    <li><p><a href="/form"> Form - Form </a><p></li>
+    <li><p><a href="/autos"> Autos CRUD - app for cars</a></p></li>
+    <li><p><a href="/cats"> Cats CRUD - apps for cats</a></p></li>
+    <li><p><a href="/myarts">Articles to exemplify owned rows</a></p></li>
+    <li><p><a href="/crispy">Crispy and boring forms</a></p></li>
+    <li><p><a href="/ads"> Classified Ads #1 #2 #3 #4 </a></p></li>
+    <li><p><a href="/pics"> Pics - Pictures ^_^ </a></p></li>
+    <li><p><a href="/unesco"> Unesco - base de datos </a></p></li>
+    <li><p><a href="/chat"> Chat - json ^_^ </a></p></li>
+    <li><p>Add a <a href="/favicon.ico"> favicon </a> in samples/urls.py and home/static <a href="https://favicon.io/favicon-converter/"> (Make your own) </a></p></li>
+    <li><p><a href="/favs"> Favs - A few of my favorite things </a></p></li>
+    <li><p><a href="/well"> Well - Searcher (A multi-user blogging system) </a></p></li>
+    <li><p><a href="/admin"> Admin - Admins only </a></p></li>
+</ol>
+
 <p>
 {% if user.is_authenticated %}
 <p>Authenticated as
@@ -111,5 +61,3 @@ homework, it should only take you one guess (instead of 100 guesses).
     <a href="https://github.com/csev/dj4e-samples" target="_blank">
     https://github.com/csev/dj4e-samples</a>
     </p>
-</body>
-</html>
