--- a/mysite/adpet/templates/adpet/ad_list.html
+++ b/mysite/adpet/templates/adpet/ad_list.html
@@ -3,10 +3,31 @@
 {% block content %}
 <style>
 h1 {text-align:center}
+
+{
+  box-sizing: border-box;
+}
+
+/* Create two equal columns that floats next to each other */
+.column {
+  float: left;
+  width: 50%;
+  padding: 10px;
+  height: 700px; 
+}
+
+/* Clear floats after the columns */
+.row:after {
+  content: "";
+  display: table;
+  clear: both;
+}
+
 </style>
+
 <h1>ADOPTING PETS</h1>
 
-<div style="float:right">
+<div style="float:center">
 <form>
   <input type="text" placeholder="Search.." name="search"
   {% if search %} value="{{ search }}" {% endif %}
@@ -18,21 +39,65 @@ h1 {text-align:center}
 
 <p>
 {% if ad_list %}
+<div class="row">
+  <div class="column" style="background-color:#aaa;"
+
 <ul>
   {% for ad in ad_list %}
-    <li>
-        <a href="{% url 'adpet:ad_detail' ad.id %}"> {{ ad.title }} </a>
-        <p>{{ad.text}}</p>
-        <p>posted by {{ad.owner}} {{ad.created_at}}</p>
-        {% if ad.owner == user %}
-        (<a href="{% url 'adpet:ad_update' ad.id %}">Edit</a> |
-        <a href="{% url 'adpet:ad_delete' ad.id %}">Delete</a>)
-        {% endif %}
-
-
-    </li>
+    {% if ad.specie == 'Cat'  %}
+        <li>
+            <a href="{% url 'adpet:ad_detail' ad.id %}"> {{ad.gender }} {{ ad.breed }} {{ad.specie}} </a>
+            <p>Approximate size: {{ad.size}}</p>
+        
+            {% if ad.content_type %}
+                <div id="overlay" class="overlay" style="text-align: left;"
+                onclick="document.getElementById('overlay').style.display = 'none';" >
+                <img style="width:20%;margin-top: 12px; border:3px solid black;" src="{% url 'adpet:ad_picture' ad.id %}">
+                </div>
+            {% endif %}
+        
+            <p>posted by {{ad.owner}} {{ad.created_at}}</p>
+            {% if ad.owner == user %}
+            (<a href="{% url 'adpet:ad_update' ad.id %}">Edit</a> |
+            <a href="{% url 'adpet:ad_delete' ad.id %}">Delete</a>)
+            {% endif %}
+    
+        </li>
+    {% endif %}
   {% endfor %}
 </ul>
+
+</div>
+<div class="column" style="background-color:#bbb;">
+
+<ul>
+  {% for ad in ad_list %}
+    {% if ad.specie == 'Dog'  %}
+        <li>
+            <a href="{% url 'adpet:ad_detail' ad.id %}"> {{ad.gender }} {{ ad.breed }} {{ad.specie}} </a>
+            <p>Approximate size: {{ad.size}}</p>
+        
+            {% if ad.content_type %}
+                <div id="overlay" class="overlay" style="text-align: left;"
+                onclick="document.getElementById('overlay').style.display = 'none';" >
+                <img style="width:20%;margin-top: 12px; border:3px solid black;" src="{% url 'adpet:ad_picture' ad.id %}">
+                </div>
+            {% endif %}
+        
+            <p>posted by {{ad.owner}} {{ad.created_at}}</p>
+            {% if ad.owner == user %}
+            (<a href="{% url 'adpet:ad_update' ad.id %}">Edit</a> |
+            <a href="{% url 'adpet:ad_delete' ad.id %}">Delete</a>)
+            {% endif %}
+    
+        </li>
+    {% endif %}
+  {% endfor %}
+</ul>
+
+</div>
+</div>
+
 {% else %}
   <p>There are no adpet in the database.</p>
 {% endif %}
