--- a/mysite/home/templates/home/main.html
+++ b/mysite/home/templates/home/main.html
@@ -17,6 +17,8 @@
     <li><p>Add a <a href="/favicon.ico"> favicon </a> in samples/urls.py and home/static <a href="https://favicon.io/favicon-converter/"> (Make your own) </a></p></li>
     <li><p><a href="/favs"> Favs - A few of my favorite things </a></p></li>
     <li><p><a href="/well"> Well - Searcher (A multi-user blogging system) </a></p></li>
+    <li><p><a href="/adpet"> Adpet - Pets in adoption </a></p></li>
+    <li><p><a href="/compu"> compu - Computer invenvory </a></p></li>
     <li><p><a href="/admin"> Admin - Admins only </a></p></li>
 </ol>
 
