Feb 20th 2021 - edit/delete inventory system

--- a/mysite/compu/templates/compu/computer_entry.html
+++ b/mysite/compu/templates/compu/computer_entry.html
@@ -48,6 +48,11 @@
     <!-- Custom styles for this template -->
     <link href="{% static 'css/stylesheet.css' %}" rel="stylesheet">
     <link href="{% static 'css/navbar-top-fixed.css' %}" rel="stylesheet">
+
+    <link href="{% static 'js/jquery-ui-1.12.1/jquery-ui.min.css' %}" rel="stylesheet">
+    <link href="{% static 'js/jquery-ui-1.12.1/jquery-ui.structure.min.css' %}" rel="stylesheet">
+    <link href="{% static 'js/jquery-ui-1.12.1/jquery-ui.theme.min.css' %}" rel="stylesheet">
+
   </head>
   <body>
 
@@ -71,7 +76,10 @@
 
 
     <script src="{% static 'js/bootstrap.bundle.min.js' %}" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script>
-
+ 
+    <script src="{% static 'js/jquery-3.5.1.min.js' %}"></script>
+    <script src="{% static 'js/jquery-ui-1.12.1/jquery-ui.js' %}"></script>
+    <script src="{% static 'js/custom.js' %}"></script>
 
   </body>
 </html>
