--- a/mysite/compu/templates/compu/main.html
+++ b/mysite/compu/templates/compu/main.html
@@ -8,7 +8,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.80.0">
-    <title>Fixed top navbar example · Bootstrap v5.0</title>
+    <title>Inventory System</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/navbar-fixed/">
 
@@ -55,8 +55,12 @@
 <main class="container">
   <div class="bg-light p-5 rounded">
       <h1>{{title}}</h1>
-    <p class="lead">This example is a quick exercise to illustrate how fixed to top navbar works. As you scroll, it will remain fixed to the top of your browser’s viewport.</p>
-    <a class="btn btn-lg btn-primary" href="/docs/5.0/components/navbar/" role="button">Login</a>
+    <p class="lead">The Computer Inventory Management System is used to store details of all computer you have in your organisation. The database used is a MySQL database with SQL workbench as the database management system. It has a simple user interface for an easy good user experience.</p>
+    {% if user.is_authenticated %}
+    <a class="btn btn-lg btn-primary" href="{% url 'logout' %}?next={% url 'compu:main' %} " role="button">Logout</a>
+    {% else %}
+    <a class="btn btn-lg btn-primary" href="{% url 'login' %}?next={% url 'compu:main' %} " role="button">Login</a>
+    {% endif %}
   </div>
 </main>
 
