--- a/mysite/compu/templates/compu/computer_entry.html
+++ b/mysite/compu/templates/compu/computer_entry.html
@@ -9,7 +9,7 @@
     <meta name="description" content="">
     <meta name="author" content="Mark Otto, Jacob Thornton, and Bootstrap contributors">
     <meta name="generator" content="Hugo 0.80.0">
-    <title>Fixed top navbar example · Bootstrap v5.0</title>
+    <title>Inventory System</title>
 
     <link rel="canonical" href="https://getbootstrap.com/docs/5.0/examples/navbar-fixed/">
 
@@ -61,8 +61,8 @@
 <main class="container">
   <div class="bg-light p-5 rounded">
         <div class="row">
-            <div class="col-sm-6"> <!--- this is the half of the page--->
-                <h1>{{title}}</h1>
+            <div class="col-sm-4"> <!--- this is the half of the page--->
+                <h1 class="title">{{title}}</h1>
                 <form method="post" action="">
                     {% csrf_token %}
                     {{form|crispy}}
@@ -70,6 +70,9 @@
                     <input class="btn btn-primary" type="submit" value="Save" />
                 </form>
             </div> <!--- first col-sm-6 --->
+            <div class="col-sm-8 aligncenter">
+                <img style="width: 100%" src="/static/img/pc.jpg">
+            </div>
         </div> <!--- first row --->
   </div>
 </main>
