--- a/mysite/compu/templates/compu/navbar.html
+++ b/mysite/compu/templates/compu/navbar.html
@@ -16,10 +16,11 @@
             <a class="nav-link" href="{% url 'compu:computer_entry' %}">Computer Entry</a>
         </li>
       </ul>
-      <form class="d-flex">
-        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-        <button class="btn btn-outline-success" type="submit">Search</button>
-      </form>
+      {% if request.user.is_authenticated %}
+      <li><a href="{% url 'logout' %}?next={% url 'compu:main' %}"> <button class="btn btn-danger">{{user}} | Logout</button></a></li>
+      {% else %}
+        <li><a href="{% url 'login' %}?next={% url 'compu:main' %}">Login</a></li>
+      {% endif %}
     </div>
   </div>
 </nav>
