adpet all_cats.html

--- a/mysite/adpet/templates/adpet/all_cats.html
+++ b/mysite/adpet/templates/adpet/all_cats.html
@@ -24,14 +24,9 @@ h2 {text-align:center}
   clear: both;
 }
 
-/* Show only 3 elements from list */
-.column ul li:nth-of-type(1n+4) {
-  display:none;
-}
-
 </style>
 
-<h1> ALL CATS </h1>
+<h1>ADOPTING PETS</h1>
 
 <div style="float:center">
 <form>
@@ -43,14 +38,17 @@ h2 {text-align:center}
 </form>
 </div>
 
+<p>HOLA</p>
+
 <p>
 {% if ad_list %}
-<div class="row">
-  <div class="column" style="background-color:#aaa;">
+<p>HOLA1</p>
+
+  <div>
   <h2> CATS </h2>
     <ul class = "grid-list">
       {% for ad in ad_list %}
-        {% if ad.specie == 'Cat'  %}
+          {% ifequal ad.specie|stringformat:"s" 'Cat'%}
             <li>
                 <a href="{% url 'adpet:ad_detail' ad.id %}"> {{ad.gender }} {{ ad.breed }} {{ad.specie}} </a>
                 <p>Approximate size: {{ad.size}}</p>
@@ -67,40 +65,11 @@ h2 {text-align:center}
                 (<a href="{% url 'adpet:ad_update' ad.id %}">Edit</a> |
                 <a href="{% url 'adpet:ad_delete' ad.id %}">Delete</a>)
                 {% endif %}
-
             </li>
-        {% endif %}
+          {% endifequal%}
       {% endfor %}
+
     </ul>
-
-</div>
- <div class="column" style="background-color:#bbb;">
- <h2> DOG </h2>
-    <ul class = "grid-list">
-      {% for ad in ad_list %}
-        {% if ad.specie == 'Dog'  %}
-            <li>
-                <a href="{% url 'adpet:ad_detail' ad.id %}"> {{ad.gender }} {{ ad.breed }} {{ad.specie}} </a>
-                <p>Approximate size: {{ad.size}}</p>
-                {% if ad.content_type %}
-                    <div id="overlay" class="overlay" style="text-align: left;"
-                    onclick="document.getElementById('overlay').style.display = 'none';" >
-                    <img style="width:20%;margin-top: 12px; border:3px solid black;" src="{% url 'adpet:ad_picture' ad.id %}">
-                    </div>
-                {% endif %}
-
-                <p>posted by {{ad.owner}} {{ad.created_at}}</p>
-                {% if ad.owner == user %}
-                (<a href="{% url 'adpet:ad_update' ad.id %}">Edit</a> |
-                <a href="{% url 'adpet:ad_delete' ad.id %}">Delete</a>)
-                {% endif %}
-
-            </li>
-        {% endif %}
-      {% endfor %}
-    </ul>
-
- </div>
 </div>
 
 {% else %}
