March 3rd 2021, adpet final touches

--- a/mysite/adpet/templates/adpet/ad_detail.html
+++ b/mysite/adpet/templates/adpet/ad_detail.html
@@ -59,6 +59,12 @@ Vaccinated: {{ad.vaccinated}}
 Spayed/neutered: {{ad.sterilized}}
 </p>
 <p>
+Name: {{ad.name}}
+</p>
+<p>
+Phone: {{ad.phone}}
+</p>
+<p>
 Description: {{ ad.text }}
 </p>
 
