--- a/mysite/adpet/templates/adpet/all_cats.html
+++ b/mysite/adpet/templates/adpet/all_cats.html
@@ -26,7 +26,7 @@ h2 {text-align:center}
 
 </style>
 
-<h1>ADOPTING PETS</h1>
+<h1>ALL CATS</h1>
 
 <div style="float:center">
 <form>
@@ -40,27 +40,31 @@ h2 {text-align:center}
 
 {% if ad_list %}
 
-  <div>
-  <h2> CATS </h2>
+<div>
     <ul class = "grid-list">
       {% for ad in ad_list %}
           {% ifequal ad.specie|stringformat:"s" 'Cat'%}
             <li>
                 <a href="{% url 'adpet:ad_detail' ad.id %}"> {{ad.gender }} {{ ad.breed }} {{ad.specie}} </a>
-                <p>Approximate size: {{ad.size}}</p>
-
-                {% if ad.content_type %}
-                    <div id="overlay" class="overlay" style="text-align: left;"
-                    onclick="document.getElementById('overlay').style.display = 'none';" >
-                    <img style="width:20%;margin-top: 12px; border:3px solid black;" src="{% url 'adpet:ad_picture' ad.id %}">
-                    </div>
-                {% endif %}
-
-                <p>posted by {{ad.owner}} {{ad.created_at}}</p>
-                {% if ad.owner == user %}
-                (<a href="{% url 'adpet:ad_update' ad.id %}">Edit</a> |
-                <a href="{% url 'adpet:ad_delete' ad.id %}">Delete</a>)
-                {% endif %}
+                <div class="row">
+                    <div class="col-sm-4"> <!--- this is the half of the page--->
+                        {% if ad.content_type %}
+                            <div id="overlay" class="overlay" style="text-align: left;"
+                            onclick="document.getElementById('overlay').style.display = 'none';" >
+                            <img style="width:20%;margin-top: 12px; border:3px solid black;" src="{% url 'adpet:ad_picture' ad.id %}">
+                            </div>
+                        {% endif %}
+                            <p>posted by {{ad.owner}} {{ad.created_at}}</p>
+                        {% if ad.owner == user %}
+                        (<a href="{% url 'adpet:ad_update' ad.id %}">Edit</a> |
+                        <a href="{% url 'adpet:ad_delete' ad.id %}">Delete</a>)
+                        <p></p>
+                        {% endif %}
+                    </div> <!--- col-sm-4 --->
+                    <div class="col-sm-8 aligncenter">
+                        <p>{{ad.text}}</p>
+                    </div> <!--- col-sm-8 aligncenter --->
+                </div> <!--- This is the end of the row --->
             </li>
           {% endifequal%}
       {% endfor %}
