--- a/mysite/adpet/templates/adpet/base_menu.html
+++ b/mysite/adpet/templates/adpet/base_menu.html
@@ -16,6 +16,8 @@
           <a href="{% url 'adpet:all_dogs' %}">All dogs</a></li>
       <li {% if request.get_full_path == adpet %}class="active"{% endif %}>
           <a href="{% url 'adpet:all_cats' %}">All cats</a></li>
+      <li {% if request.get_full_path == adpet %}class="active"{% endif %}>
+          <a href="{% url 'adpet:table' %}">Adpet table</a></li>
        <li {% if request.get_full_path == adpet %}class="active"{% endif %}>
           <a href="{% url 'adpet:contact_us' %}">Contact us</a></li>
     </ul>
